@@ -24,9 +24,9 @@
 # get folder where script is located
 BUILD_TREND_HOME=$(cd `dirname "${BASH_SOURCE[0]}"` && pwd)
 BUILD_TREND_LOGFILE=$BUILD_TREND_HOME/timestamps.csv
-BUILD_TREND_TRENDS_DIR=$BUILD_TREND_HOME/dashboard
-BUILD_TREND_OUTPUTFILE=$BUILD_TREND_TRENDS_DIR/buildtimes.xml
-BUILD_TREND_TRENDFILE=$BUILD_TREND_TRENDS_DIR/trend.png
+BUILD_TREND_DASHBOARD_DIR=$BUILD_TREND_HOME/dashboard
+BUILD_TREND_OUTPUTFILE=$BUILD_TREND_DASHBOARD_DIR/buildtimes.xml
+BUILD_TREND_TRENDFILE=$BUILD_TREND_DASHBOARD_DIR/trend.png
 PATH=${PATH}:${BUILD_TREND_HOME}
 
 #cleanup previous logfile
@@ -35,6 +35,6 @@ if [ -f $BUILD_TREND_LOGFILE ]; then
 fi
 
 export BUILD_TREND_HOME BUILD_TREND_LOGFILE BUILD_TREND_OUTPUTFILE
-export BUILD_TREND_TRENDS_DIR
+export BUILD_TREND_DASHBOARD_DIR
 export BUILD_TREND_TRENDFILE PATH
 export BUILD_TREND_INIT=1
