@@ -85,11 +85,11 @@ if [ "$TRAVIS" == "true" ] && [ "$BUILD_TREND_INIT" == "1" ]; then
   export BUILD_TREND_OUTPUTFILE=$GH_PAGES_BUILD_TREND_DIR/buildtimes.xml
   export BUILD_TREND_TRENDFILE=$GH_PAGES_BUILD_TREND_DIR/trend.png
   BUILD_TREND_OVERVIEWFILE=$GH_PAGES_BUILD_TREND_DIR/index.html
-  BUILD_TREND_ORIGIN_OVERVIEWFILE=$BUILD_TREND_TRENDS_DIR/index.html
+  BUILD_TREND_ORIGIN_OVERVIEWFILE=$BUILD_TREND_DASHBOARD_DIR/index.html
   BUILD_TREND_ASSETS=$GH_PAGES_BUILD_TREND_DIR/.
-  BUILD_TREND_ORIGIN_ASSETS=$BUILD_TREND_TRENDS_DIR/assets
+  BUILD_TREND_ORIGIN_ASSETS=$BUILD_TREND_DASHBOARD_DIR/assets
   export BUILD_TREND_CONFIGFILE=$GH_PAGES_BUILD_TREND_DIR/config.js
-  export BUILD_TREND_SAMPLE_CONFIGFILE=$BUILD_TREND_TRENDS_DIR/config_sample.js
+  export BUILD_TREND_SAMPLE_CONFIGFILE=$BUILD_TREND_DASHBOARD_DIR/config_sample.js
 
   # perform analysis
   analyse.py --mode="$mode" --log="$logLevel"
