@@ -17,6 +17,7 @@ v0.2 (not yet released)
 - change license to GNU Affero General Public License v3 or later (AGPLv3+)
 - removed analyse.sh, directly use analyse.py instead
 - renamed 'trends' folder to 'dashboard'
+- rename environment variable BUILD_TREND_TRENDS_DIR to BUILD_TREND_DASHBOARD_DIR
 
 v0.1.2 (released on 6Aug2014)
 - improve Travis CI example : pull released version from git
